--- a/css/home.css
+++ b/css/home.css
@@ -8,9 +8,11 @@ body, html{
     margin: 0;
     padding: 0;
     font-family: monospace;
-    box-sizing: border-box;   
+    box-sizing: border-box;
+    transition: all ease-in-out .2s;   
 }
 #container{
+    top: 50PX;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -18,7 +20,7 @@ body, html{
 nav{
     display: block;
     position: absolute;
-    top: 0;
+    top: 100px;
     left: 0;
     width: 200px;
     margin-left: 0px;
@@ -27,6 +29,7 @@ nav{
 
 }
 #logo{
+
 height: 50px;
 background-color: #333333;
 color: #1e90ff;
@@ -35,10 +38,73 @@ line-height: 50px;
 font-size: 1.3em;
 font-family: arial;
 }
-#logo span{
-    font-size: .8em;
-    font-family: monospace;
-    font-size: italic;
-    color: #f7f7f7;
+#menu{
+    width: 100%;
+    background-color: #333333;
+}
 
+#menu li{
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+    
+}
+
+#menu li>a { 
+    font-size: 0.8em;
+    font-family: arial;
+    width: 100%;
+    height: 100%;
+    color: #f7f7f7;
+    display: block;
+    text-align: center;
+    text-decoration: none;
+}
+#menu li:hover{
+    background-color: #151515;
+    
+}
+#menu li>a:hover{
+    color: #1e90ff;
+}
+header{
+    width: calc(100% - 200px);
+    height: 50px;
+    position: absolute;
+    display: block;
+    top: 100px;
+    left: 200px;
+    background-color: #68dd44;
+    color: #51e244;
+    line-height: 40px;
+}
+header #links {
+    float: right;
+    height: 50px;
+    display: block;
+    color: #f7f7f7;
+    font-size: 2em;
+    
+}
+
+#links>a{
+    color: #3511d8;
+    text-decoration: none;
+    padding: 0.25em;
+    height: 100%;
+    width: 100%;
+    display: block;
+}
+
+#links:hover{
+background-color: #1e90ff;
+}
+
+main{
+    position: absolute;
+    top: 50px;
+    left: 200px;
+    height: calc(100%-50px);
+    width: calc(100%-200px);
+    background-color: #ecf0f1;
 }
