views connection error commit

--- a/views/checkin.html
+++ b/views/checkin.html
@@ -19,9 +19,9 @@
                 會議管理系統                
             </div>
             <ul id=menu>
-                <li><a href="">預約會議室</a></li>
-                <li><a href="">會議簽到</a></li>
-                <li><a href="">會議記錄</a></li>
+                <li><a href="/reservation">預約會議室</a></li>
+                <li><a href="/checkin">會議簽到</a></li>
+                <li><a href="/record">會議記錄</a></li>
             </ul>
         </nav>   
         <header>
