--- a/css/home.css
+++ b/css/home.css
@@ -31,8 +31,8 @@ nav{
 #logo{
 
 height: 50px;
-background-color: #333333;
-color: #1e90ff;
+background-color: #00AA00;
+color: #f7f7f7;
 text-align: center;
 line-height: 50px;
 font-size: 1.3em;
@@ -74,8 +74,8 @@ header{
     display: block;
     top: 100px;
     left: 200px;
-    background-color: #68dd44;
-    color: #51e244;
+    background-color: #00AA00;
+    color: #00AA00;
     line-height: 40px;
 }
 header #links {
