--- a/views/homepage.html
+++ b/views/homepage.html
@@ -7,9 +7,9 @@
     <title>首頁</title>
     
     <link href="/css/home.css" type="text/css" rel="stylesheet" charset="utf-8"> <!--連不上，一直錯一直幹-->
-
- 
-  
+   
+    <script src="js/require.js" defer async="true" data-main="/js/homepage"></script>
+    <script src="/js/homepage.js"></script>
 </head>
 <body>
         <img src="/img/homeTitlePicture.jpg" >
@@ -33,6 +33,6 @@
             
         </main> 
     </div>    
-    <script src="js/homepage.js"></script>
+    
 </body>
 </html>
