--- a/views/login.html
+++ b/views/login.html
@@ -3,7 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<title>會議室預約系統登入</title>
+		<script src="/js/homepage.js"></script>
 		<style type="text/css">
+		
         body{
             background-image: url("https://upload.wikimedia.org/wikipedia/commons/d/db/Cathay_General_Hospital_HQ_20160723.jpg");;
             background-size: 100%;
@@ -44,6 +46,7 @@
 			color: #ffffff;
 		}
 		</style>
+		
 	</head>
 	<body>
 		<div class="login-form">
@@ -55,4 +58,5 @@
 			</form>
 		</div>
 	</body>
+	
 </html>
