--- a/views/checkin.html
+++ b/views/checkin.html
@@ -7,8 +7,8 @@
     <title>首頁</title>
     
     <link href="/css/home.css" type="text/css" rel="stylesheet" charset="utf-8"> <!--連不上，一直錯一直幹-->
-
- 
+    <script src="js/require.js" defer async="true" ></script>
+    <script src="/js/homepage.js" type=text/js></script>
   
 </head>
 <body>
@@ -33,6 +33,6 @@
             
         </main> 
     </div>    
-    <script src="js/homepage.js"></script>
+    
 </body>
 </html>
